<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Registro_puerta">

    <!-- Título principal-->
    <TextView
        android:id="@+id/text_registro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registro_registro"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Aqui guardara el registro de que paso con la puerta-->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_puerta_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:cardElevation="4dp"
        app:cardBackgroundColor="#E0E0E0"
        app:layout_constraintTop_toBottomOf="@id/text_registro"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="16dp"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/puerta_1"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/n_de_veces_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fecha_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hora_2" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <!-- Barra de navegación inferior para acceder a otras pantallas -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_navegacion"
        app:labelVisibilityMode="labeled"
        android:background="@android:color/transparent"
        app:backgroundTint="@android:color/transparent"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@color/gris" />

</androidx.constraintlayout.widget.ConstraintLayout>