<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".ayuda">

    <!-- Título de la pantalla -->
    <TextView
        android:id="@+id/tit_ayuda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ayuda_titulo"
        android:textSize="28sp"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Campo de entrada para buscar información -->
    <EditText
        android:id="@+id/buscar"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:hint="@string/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tit_ayuda"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para ayudar en la configuracion -->
    <Button
        android:id="@+id/ayuda_configuracion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/ayuda_config"
        app:layout_constraintTop_toBottomOf="@id/buscar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para solicitar ayuda-->
    <Button
        android:id="@+id/llamar_ayuda"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/solicitar_ayuda"
        android:drawableStart="@drawable/ic_llamar"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/ayuda_configuracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para enviar reclamos -->
    <Button
        android:id="@+id/reclamos"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/reclamos"
        android:drawableStart="@drawable/ic_reclamo"
        android:drawablePadding="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/llamar_ayuda"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Barra de navegación inferior -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_navegacion"
        app:labelVisibilityMode="labeled"
        android:background="@android:color/transparent"
        app:backgroundTint="@android:color/transparent"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@color/gris" />

</androidx.constraintlayout.widget.ConstraintLayout>
