<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Configuracion">

    <!-- Título de la pantalla de configuración -->
    <TextView
        android:id="@+id/titulo_configuracion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/config_titulo"
        android:textSize="24sp"
        android:layout_marginTop="24dp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />



    <!-- Botón para gestionar notificaciones -->
    <Button
        android:id="@+id/btn_notificaciones"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/config_notificaciones"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/titulo_configuracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para cambiar el tema de la aplicación -->
    <Button
        android:id="@+id/btn_temas"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/config_temas"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_notificaciones"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para gestionar la contraseña y seguridad -->
    <Button
        android:id="@+id/btn_contrasena_seguridad"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/contrasena_y_seguridad"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_temas"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para gestionar actualizaciones de la aplicación -->
    <Button
        android:id="@+id/btn_actualizacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/actualizacion"
        android:drawablePadding="8dp"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/btn_contrasena_seguridad"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Barra de navegación inferior para acceder a otras pantallas -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_navegacion"
        app:labelVisibilityMode="labeled"
        android:background="@android:color/transparent"
        app:backgroundTint="@android:color/transparent"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@color/gris" />

</androidx.constraintlayout.widget.ConstraintLayout>
