<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MiPerfil">

    <!-- Sección de título con un icono y texto centrados -->
    <LinearLayout
        android:id="@+id/layout_titulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="24dp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- Icono del perfil -->
        <ImageView
            android:id="@+id/icono_perfil"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_perfil" />

        <!-- Texto "mi perfil" al lado del icono -->
        <TextView
            android:id="@+id/titulo_perfil"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mi_perfil"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_marginStart="8dp"/>
    </LinearLayout>

    <!-- Sección de información del perfil con nombre y correo -->
    <LinearLayout
        android:id="@+id/layout_info_perfil"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_titulo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp">

        <!-- Texto que muestra el nombre del usuario -->
        <TextView
            android:id="@+id/text_nombre"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:textSize="18sp" />

        <!-- Texto que muestra el correo del usuario -->
        <TextView
            android:id="@+id/text_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="18sp"
            android:layout_marginTop="4dp" />
    </LinearLayout>

    <!-- Botón para actualizar los datos del perfil -->
    <Button
        android:id="@+id/btn_actualizar_datos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/actualizar_datos"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layout_info_perfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp" />

    <!-- Botón para cerrar sesión -->
    <Button
        android:id="@+id/btn_cerrar_sesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="32dp"
        android:text="@string/cerrar_sesion"
        app:layout_constraintBottom_toBottomOf="@+id/barra_navegacion"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_actualizar_datos" />

    <!-- Barra de navegación en la parte inferior de la pantalla -->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/barra_navegacion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:itemIconSize="30dp"
        app:menu="@menu/menu_navegacion"
        app:labelVisibilityMode="labeled"
        android:background="@android:color/transparent"
        app:backgroundTint="@android:color/transparent"
        app:itemTextColor="@android:color/black"
        app:itemIconTint="@color/gris" />

</androidx.constraintlayout.widget.ConstraintLayout>
